fixed scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,19 @@ body {
     overflow: hidden;
 }
 
+/* Custom Scrollbar */
+::-webkit-scrollbar {
+    width: 15px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #4d4d4d;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #808080;
+}
+
 /* Utilities */
 .flex-wrapper {
     height: 100vh;
@@ -79,7 +92,7 @@ body {
 }
 
 
-#sidebar ul li a{
+#sidebar ul li a {
     text-decoration: none;
     color: #707070;
 }
@@ -138,11 +151,12 @@ body {
 }
 
 
- 
+
 #content {
     width: 100%;
     height: 100vh;
 }
+
 /* Header */
 header {
     z-index: 1;
@@ -173,6 +187,7 @@ main {
 nav {
     margin: 10px 0;
 }
+
 nav ul {
     text-align: center;
 }
@@ -217,6 +232,7 @@ main li a {
 main a {
     text-decoration: none;
 }
+
 .cards {
     display: flex;
     flex-wrap: wrap;
@@ -294,10 +310,12 @@ main .for-you-card:hover {
         bottom: -30px;
         filter: opacity(0);
     }
+
     50% {
         bottom: -5px;
         filter: opacity(0.3);
     }
+
     100% {
         bottom: 0;
         filter: opacity(1);
@@ -462,7 +480,7 @@ footer h3:hover {
 }
 
 
-#player-controls *:hover{
+#player-controls *:hover {
     transform: scale(1.05);
 }
 
@@ -475,7 +493,7 @@ footer h3:hover {
 }
 
 /* Right */
-#right-f i{
+#right-f i {
     margin-right: 5px;
     cursor: pointer;
 }
@@ -539,14 +557,14 @@ footer h3:hover {
 }
 
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 768px) {
 
     /* Sidebar */
     #sidebar {
         flex-basis: 220px;
         padding: 15px;
     }
-    
+
     #logo-xs {
         display: none;
     }
@@ -599,14 +617,14 @@ footer h3:hover {
         width: 150px;
     }
 
-    
+
 
     /* Playlist */
     #playlist {
         margin: 30px 0;
         display: block;
     }
-    
+
     #playlist h3 {
         color: white;
         font-size: 15px;
@@ -627,7 +645,7 @@ footer h3:hover {
     }
 
     .create-playlist:hover {
-        color: white;        
+        color: white;
     }
 
     .playlist-name {
@@ -662,7 +680,7 @@ footer h3:hover {
 
 
 @media screen and (min-width: 992px) {
-    
+
     .card {
         flex-basis: calc(100% / 4 - 30px);
     }
